--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown ative">
+            <li class="nav-item active">
+               <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <!-- <li class="nav-item dropdown ative">
                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
                   Company
@@ -70,7 +73,7 @@
                   <a class="dropdown-item" href="faq.html">FAQ</a>
                </div>
 
-            </li>
+            </li> -->
             <li class="nav-item dropdown ative">
                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
@@ -78,7 +81,7 @@
                </a>
                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="invest.html">About</a>
-                  <a class="dropdown-item" href="#">How we do it</a>
+                  <a class="dropdown-item" href="faq.html">FAQ</a>
                   <a class="dropdown-item" href="#">Businesses</a>
                   <a class="dropdown-item" href="#">Rolling Fund</a>
                </div>
@@ -140,27 +143,24 @@
             <img class="d-block w-100 w3-height-auto w3-width-100%" src="images/3.jpg" alt="Second slide"
                style="height: 900px; ">
             <div class="carousel-caption d-md-block pt-5">
-               <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">Lorem
-                  ipsum dolor sit amet consectetur </h3>
-               <p class="animated zoomIn" style="animation-delay: 1s;"><a href="about.html">More Info</a></p>
+               <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">We are in the business of agriculture, agro-processing and farmland and timberland investment management in Uganda</h3>
+               <p class="animated zoomIn" style="animation-delay: 1s;"><a href="invest.html">More Info</a></p>
 
             </div>
          </div>
          <div class="carousel-item">
             <img class="d-block w-100" src="images/cofee.jpg" alt="Third slide" style="height: 900px; ">
             <div class="carousel-caption d-md-block  pt-5">
-               <h5 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">Lorem
-                  ipsum dolor sit amet consectetur </h3>
-               <p class="animated zoomIn" style="animation-delay: 1s;"><a href="about.html">More Info</a></p>
+               <h5 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">We are in the business of agriculture, agro-processing and farmland and timberland investment management in Uganda</h3>
+               <p class="animated zoomIn" style="animation-delay: 1s;"><a href="invest.html">More Info</a></p>
 
             </div>
          </div>
          <div class="carousel-item">
             <img class="d-block w-100" src="images/bg12.png" alt="Third slide" style="height: 900px; font-size: xx-large;">
             <div class="carousel-caption d-md-block pt-5">
-               <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff"> Lorem
-                  ipsum dolor sit amet consectetur </h3>
-               <p class="animated zoomIn" style="animation-delay: 1s;"><a href="about.html">More Info</a></p>
+               <h3 class="animated bounceInRight" style="animation-delay: 1s; font-size: xx-large; color: #fff">We are in the business of agriculture, agro-processing and farmland and timberland investment management in Uganda</h3>
+               <p class="animated zoomIn" style="animation-delay: 1s;"><a href="invest.html">More Info</a></p>
 
             </div>
          </div>
@@ -199,8 +199,8 @@
             <div class="card border-0 shadow">
                <div class="card-body">
                   <div class="row" style="padding: 20px; font-size: 20px; text-align: center;">
-                     TIGPE builds and manages agriculture projects and enabling infrastructures and services through 
-                     investment, propagation, plantation and processing with a focus on Bamboo-based agroforestry</div>
+                     TIGPE builds and manages agriculture projects and enables infrastructures and services through 
+               plantation, propagation and investment</div>
                   <hr>
               
 
@@ -339,7 +339,7 @@
       </div>
       <nav class="nav navbar" style="height: 150px; background-color: #90EE90;">
          
-         <div class="show w3-center mx-auto">9,200+ <br> Crops Planted</div>
+         <div class="show w3-center">9,200+ <br> Crops Planted</div>
          <div class="show w3-center mx-auto">1,800+ <br> Investments</div>
          <div class="show w3-center mx-auto">133.4m <br> Project Value</div>
          <div class="show w3-center mx-auto">9%-24% <br> Products</div>
@@ -371,10 +371,9 @@
             </div>
             <div class="col-md-6 offset-md-1">
                <div class="titlepage">
-                  <h2 class="padd_top30">Mind in Balance</h2>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                     labore et dolore magna aliquyam erat, sed diam voluptu</p>
-                  <a class="read_more ye_b5n " href="Javascript:void(0)"> Read More</a>
+                  <h2 class="padd_top30">About TIGPE</h2>
+                  <p>We are in the business of agriculture, agro-processing and farmland and timberland investment management in Uganda</p>
+                  <a class="read_more ye_b5n " href="invest.html"> Read More</a>
                </div>
             </div>
          </div>
@@ -544,7 +543,7 @@
                       <h3>QUICK LINKS</h3>
                       <ul class="link_menu">
                           <li><a href="index.html">Home</a></li>
-                          <li><a href="about.html"> About Us</a></li>
+                          <li><a href="invest.html"> About Us</a></li>
                           <li><a href="propagation.html">Propagation</a></li>
                           <li><a href="invest.html">Investments</a></li>
                           <li><a href="contact.html">Get in Touch</a></li>
