--- a/processing.html
+++ b/processing.html
@@ -45,8 +45,8 @@
     <!-- end loader -->
 
 
-   <!-- topnav start -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="navbar_top">
+  <!-- topnav start -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky" id="navbar_top">
     <a href="index.html"> <img src="images/log.png" alt="" height=""> &nbsp</a>
   
      <!-- <img src="images/logo2.png" style="height: 80px; width: 140px;"> -->
@@ -58,7 +58,10 @@
 
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-           <li class="nav-item dropdown ative">
+           <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+           </li>
+           <!-- <li class="nav-item dropdown ative">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                  aria-haspopup="true" aria-expanded="false">
                  Company
@@ -70,7 +73,7 @@
                  <a class="dropdown-item" href="faq.html">FAQ</a>
               </div>
 
-           </li>
+           </li> -->
            <li class="nav-item dropdown ative">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                  aria-haspopup="true" aria-expanded="false">
@@ -78,7 +81,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                  <a class="dropdown-item" href="invest.html">About</a>
-                 <a class="dropdown-item" href="#">How we do it</a>
+                 <a class="dropdown-item" href="faq.html">FAQ</a>
                  <a class="dropdown-item" href="#">Businesses</a>
                  <a class="dropdown-item" href="#">Rolling Fund</a>
               </div>
